# manage-finances-using-python

./: README.md  index.ipynb  pyproject.toml  talk.md
